[gd_scene load_steps=5 format=3 uid="uid://c3qibm7i5rtuj"]

[ext_resource type="Script" path="res://Scenes/GameOverMenu.gd" id="1_s5q1q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7ugd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr50e"]
bg_color = Color(1, 0.179812, 0.706312, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaors"]
bg_color = Color(0.962766, 2.11775e-06, 0.596885, 1)

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5q1q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.188372, 0.188371, 0.188371, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "The Mission Failed"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_c7ugd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dr50e")
theme_override_styles/focus = SubResource("StyleBoxFlat_kaors")
button_mask = 0
text = "Restart"

[node name="Main" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_c7ugd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dr50e")
theme_override_styles/focus = SubResource("StyleBoxFlat_kaors")
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main" to="." method="_on_main_pressed"]
